<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background"
    android:padding="16dp"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/image_unicid"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/unicid_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_play"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_play"
        app:layout_constraintLeft_toLeftOf="@id/image_unicid"
        app:layout_constraintTop_toBottomOf="@+id/image_unicid"
        app:tint="@color/ic_tint_verde" />

    <TextView
        android:id="@+id/text_rgm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rgm"
        android:textColor="@color/texto"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/ic_play"
        app:layout_constraintTop_toBottomOf="@+id/image_unicid" />

    <EditText
        android:id="@+id/edit_rgm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/fundo_edit_tint"
        android:hint="@string/digite_rgm"
        android:imeOptions="actionSend"
        android:inputType="number"
        android:textColor="@color/texto_edit"
        android:textColorHint="@color/texto_edit_hint"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/text_rgm"
        app:layout_constraintTop_toBottomOf="@id/text_rgm" />

    <ImageView
        android:id="@+id/ic_play2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_play"
        app:layout_constraintLeft_toLeftOf="@id/image_unicid"
        app:layout_constraintTop_toBottomOf="@+id/edit_rgm"
        app:tint="@color/ic_tint_verde" />

    <TextView
        android:id="@+id/text_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/senha"
        android:textColor="@color/texto"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/ic_play2"
        app:layout_constraintTop_toBottomOf="@+id/edit_rgm" />

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/fundo_edit_tint"
        android:hint="@string/digite_senha"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColor="@color/texto_edit"
        android:textColorHint="@color/texto_edit_hint"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/text_senha"
        app:layout_constraintTop_toBottomOf="@id/text_senha" />

    <Button
        android:id="@+id/button_logar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/fundo_botao"
        android:padding="12dp"
        android:text="@string/logar"
        android:textColor="@color/texto_botao"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/edit_senha"
        app:layout_constraintRight_toLeftOf="@+id/button_sair"
        app:layout_constraintTop_toBottomOf="@id/edit_senha" />

    <Button
        android:id="@+id/button_sair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/fundo_botao"
        android:padding="12dp"
        android:text="@string/sair"
        android:textColor="@color/texto_botao"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/button_logar"
        app:layout_constraintRight_toRightOf="@id/edit_senha"
        app:layout_constraintTop_toBottomOf="@id/edit_senha" />


</androidx.constraintlayout.widget.ConstraintLayout>