<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background"
    android:padding="12dp"
    tools:context=".view.DisciplinasActivity">

    <ImageView
        android:id="@+id/image_unicid"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/unicid_logo_ic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_materia_hoje"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_materia_hoje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/aula_hoje"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_unicid"
        app:layout_constraintLeft_toRightOf="@id/image_unicid"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_unicid" />

    <ImageView
        android:id="@+id/image_arrow_below"
        android:elevation="1dp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_arrow_below"
        app:tint="@color/ic_tint_verde"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="@id/spinner_disciplina"
        app:layout_constraintRight_toRightOf="@id/spinner_disciplina"
        app:layout_constraintTop_toTopOf="@id/spinner_disciplina" />

    <Spinner
        android:id="@+id/spinner_disciplina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/spinner_fundo"
        android:entries="@array/spinner_disciplina_values"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="@id/image_unicid"
        app:layout_constraintTop_toBottomOf="@id/image_unicid" />

    <TextView
        android:id="@+id/text_todas_materias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_todas_materias"
        android:textColor="@color/texto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_disciplina"/>

    <ImageView
        android:id="@+id/image_circle0"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_circle"
        app:layout_constraintLeft_toLeftOf="@id/spinner_disciplina"
        app:layout_constraintTop_toBottomOf="@id/text_todas_materias"
        app:tint="@color/ic_tint_verde" />

    <TextView
        android:id="@+id/text_materia_dia_semana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/dia_da_semana_texto"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_circle0"
        app:layout_constraintLeft_toRightOf="@id/image_circle0"
        app:layout_constraintTop_toTopOf="@id/image_circle0" />

    <ImageView
        android:id="@+id/image_circle1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_circle"
        app:layout_constraintLeft_toLeftOf="@id/spinner_disciplina"
        app:layout_constraintTop_toBottomOf="@id/text_materia_dia_semana"
        app:tint="@color/ic_tint_verde" />

    <TextView
        android:id="@+id/text_data_hora_aula_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/inicio_aula"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_circle1"
        app:layout_constraintLeft_toRightOf="@id/image_circle1"
        app:layout_constraintTop_toTopOf="@id/image_circle1" />

    <ImageView
        android:id="@+id/image_circle2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_circle"
        app:layout_constraintLeft_toLeftOf="@id/spinner_disciplina"
        app:layout_constraintTop_toBottomOf="@id/text_data_hora_aula_inicio"
        app:tint="@color/ic_tint_verde" />

    <TextView
        android:id="@+id/text_data_hora_aula_fim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/fim_aula"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_circle2"
        app:layout_constraintLeft_toRightOf="@id/image_circle2"
        app:layout_constraintTop_toTopOf="@id/image_circle2" />

    <ImageView
        android:id="@+id/image_circle3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_circle"
        app:layout_constraintLeft_toLeftOf="@id/spinner_disciplina"
        app:layout_constraintTop_toBottomOf="@id/text_data_hora_aula_fim"
        app:tint="@color/ic_tint_verde" />

    <TextView
        android:id="@+id/text_materia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/nome_materia"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_circle3"
        app:layout_constraintLeft_toRightOf="@id/image_circle3"
        app:layout_constraintTop_toTopOf="@id/image_circle3" />

    <ImageView
        android:id="@+id/image_circle4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_circle"
        app:layout_constraintLeft_toLeftOf="@id/spinner_disciplina"
        app:layout_constraintTop_toBottomOf="@id/text_materia"
        app:tint="@color/ic_tint_verde" />

    <TextView
        android:id="@+id/text_professor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/nome_professor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_circle4"
        app:layout_constraintLeft_toRightOf="@id/image_circle4"
        app:layout_constraintTop_toTopOf="@id/image_circle4" />

    <ImageView
        android:id="@+id/image_circle5"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_circle"
        app:layout_constraintLeft_toLeftOf="@id/spinner_disciplina"
        app:layout_constraintTop_toBottomOf="@id/text_professor"
        app:tint="@color/ic_tint_verde" />

    <TextView
        android:id="@+id/text_andar_sala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/local_aula"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_circle5"
        app:layout_constraintLeft_toRightOf="@id/image_circle5"
        app:layout_constraintTop_toTopOf="@id/image_circle5" />

    <View
        android:id="@+id/view_presenca"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="15dp"
        android:background="@color/view"
        app:layout_constraintLeft_toLeftOf="@id/spinner_disciplina"
        app:layout_constraintTop_toBottomOf="@id/image_circle5" />

    <ImageView
        android:id="@+id/image_circle6"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_circle"
        app:layout_constraintLeft_toLeftOf="@id/spinner_disciplina"
        app:layout_constraintTop_toBottomOf="@id/view_presenca"
        app:tint="@color/ic_tint_verde" />

    <TextView
        android:id="@+id/text_presenca_registrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/presenca_registrada"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_circle6"
        app:layout_constraintLeft_toRightOf="@id/image_circle6"
        app:layout_constraintTop_toTopOf="@id/image_circle6" />

    <ImageView
        android:id="@+id/image_circle7"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_circle"
        app:layout_constraintLeft_toLeftOf="@id/spinner_disciplina"
        app:layout_constraintTop_toBottomOf="@id/text_presenca_registrada"
        app:tint="@color/ic_tint_verde" />

    <TextView
        android:id="@+id/text_local_presenca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/local_registro"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_circle7"
        app:layout_constraintLeft_toRightOf="@id/image_circle7"
        app:layout_constraintTop_toTopOf="@id/image_circle7" />

    <Button
        android:id="@+id/button_desistir"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@color/fundo_botao"
        android:padding="8dp"
        android:text="@string/desistir"
        android:textColor="@color/texto_botao"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/view_presenca"
        app:layout_constraintRight_toLeftOf="@id/button_registrar_presenca"
        app:layout_constraintTop_toBottomOf="@id/text_local_presenca" />

    <Button
        android:id="@+id/button_registrar_presenca"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@color/fundo_botao"
        android:padding="8dp"
        android:text="@string/registrar_presenca"
        android:textColor="@color/texto_botao"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/text_local_presenca"
        app:layout_constraintLeft_toRightOf="@id/button_desistir"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>